Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74449

no member named 'sprintf' in 'QString'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.14.0 Alpha
    • 5.14
    • Tools: Linguist
    • None
    • Android, iOS/tvOS/watchOS, Linux/Other display system, QNX
    • 62e4e2021bc1e68ae9bd2e9b49556282cfe816b9 (qt/qttools/dev)

    Description

      https://codereview.qt-project.org/#/c/254963/ Update submodules on 'dev' in qt5 - PS8 with other two changes

      http://coin/coin/integration/qt/qt5/tasks/1552569799

      http://coin/coin/api/results/qt/qttools/4bbc166822fc6cf91a8cc2472263b96b57bc553b/MacOSMacOS_10_13x86_64IOSIOS_ANYmultiClangqtci-macos-10.13-x86_64-2-2a311bDebugAndRelease_DisableTests_Static/9ae0e899daf927d4a35a06853e0dd65b2bbba287/build_1552571995/log.txt.gz

      agent:2019/03/14 14:48:18 build.go:197: /Applications/Xcode10.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -pipe -stdlib=libc++ -O2 -std=c++11  -arch x86_64 -isysroot /Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk -mmacosx-version-min=10.12 -fno-exceptions -Wall -W -ffunction-sections -fdata-sections -fPIC -D'CLANG_RESOURCE_DIR="/usr/local/libclang-6.0/lib/clang/6.0.1/include"' -DQDOC2_COMPAT -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_QMLDEVTOOLS_LIB -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.14.0"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=14 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I/usr/local/libclang-6.0/include -I/src/tools/qdoc -I/src/tools/qdoc/qmlparser -I/Users/qt/work/install/include -I/Users/qt/work/install/include/QtQml -I/Users/qt/work/install/include/QtQml/5.14.0 -I/Users/qt/work/install/include/QtQml/5.14.0/QtQml -I/Users/qt/work/install/include/QtCore -I/Users/qt/work/install/include/QtCore/5.14.0 -I/Users/qt/work/install/include/QtCore/5.14.0/QtCore -I/Users/qt/work/install/include/QtXml -I/Users/qt/work/install/include/QtXml/5.14.0 -I/Users/qt/work/install/include/QtXml/5.14.0/QtXml -I/Users/qt/work/install/mkspecs/macx-clang -o .obj/text.o text.cpp
      agent:2019/03/14 14:48:19 build.go:197: ../shared/xliff.cpp:736:9: error: no member named 'sprintf' in 'QString'; did you mean 'asprintf'?
      agent:2019/03/14 14:48:19 build.go:197:     msg.sprintf("XML error: Parse error at line %d, column %d (%s).\n",
      agent:2019/03/14 14:48:19 build.go:197:         ^~~~~~~
      agent:2019/03/14 14:48:19 build.go:197:         asprintf
      agent:2019/03/14 14:48:19 build.go:197: /Users/qt/work/install/include/QtCore/qstring.h:330:20: note: 'asprintf' declared here
      agent:2019/03/14 14:48:19 build.go:197:     static QString asprintf(const char *format, ...) Q_ATTRIBUTE_FORMAT_PRINTF(1, 2);
      agent:2019/03/14 14:48:19 build.go:197:                    ^
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes