Replace deprecated QString::sprintf

QString::sprintf got deprecated in qtbase commit f8f592d5c22c378ac94.
Use QString::asprintf instead.

Fixes: QTBUG-74449
Change-Id: I1a635551be4f021e5da1145c03b4d0aaf4ebda8c
Reviewed-by: Liang Qi <liang.qi@qt.io>