src/pixeltool/qpixeltool.cpp
@@ -255,13 +255,12 @@ void QPixelTool::paintEvent(QPaintEvent *)
     }
 
     if (m_freeze) {
-        QString str;
-        str.sprintf("%8X (%3d,%3d,%3d,%3d)",
-                    m_currentColor,
-                    (0xff000000 & m_currentColor) >> 24,
-                    (0x00ff0000 & m_currentColor) >> 16,
-                    (0x0000ff00 & m_currentColor) >> 8,
-                    (0x000000ff & m_currentColor));
+        QString str = QString::asprintf("%8X (%3d,%3d,%3d,%3d)",
+                                        m_currentColor,
+                                        (0xff000000 & m_currentColor) >> 24,
+                                        (0x00ff0000 & m_currentColor) >> 16,
+                                        (0x0000ff00 & m_currentColor) >> 8,
+                                        (0x000000ff & m_currentColor));
         render_string(&p, w, h,
                       str,
                       Qt::AlignBottom | Qt::AlignRight);
@@ -279,12 +278,11 @@ void QPixelTool::paintEvent(QPaintEvent *)
         p.setPen(QPen(Qt::black, 1, Qt::SolidLine));
         p.drawRect(r);
 
-        QString str;
-        str.sprintf("Rect: x=%d, y=%d, w=%d, h=%d",
-                    r.x() / m_zoom,
-                    r.y() / m_zoom,
-                    r.width() / m_zoom,
-                    r.height() / m_zoom);
+        QString str = QString::asprintf("Rect: x=%d, y=%d, w=%d, h=%d",
+                                        r.x() / m_zoom,
+                                        r.y() / m_zoom,
+                                        r.width() / m_zoom,
+                                        r.height() / m_zoom);
         render_string(&p, w, h, str, Qt::AlignBottom | Qt::AlignLeft);
     }
 
